--- a/index.html
+++ b/index.html
@@ -1,99 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | [Blogr]</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-  Product
 
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
+  <!--Header-->
+  <header>
+    <div id="bg">
+      <nav class="navbar navbar-expand-lg w-75 mx-auto bg-transparent pt-5">
+        <div class="container-fluid ">
+          <a class="navbar-brand fs-2 text-white" href="#"><strong>Blogr</strong></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse mt-3 ms-5 fs-6 " id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2">
+              <li class="nav-item dropdown me-2">
+                <a class="nav-link dropdown-toggle text-white " href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Product
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Overview</a></li>
+                  <li><a class="dropdown-item" href="#">Pricing</a></li>
+                  <li><a class="dropdown-item" href="#">Marketplace</a></li>
+                  <li><a class="dropdown-item" href="#">Features</a></li>
+                  <li><a class="dropdown-item" href="#">Integrations</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown me-2">
+                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Company
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">About</a></li>
+                  <li><a class="dropdown-item" href="#">Team</a></li>
+                  <li><a class="dropdown-item" href="#">Blog</a></li>
+                  <li><a class="dropdown-item" href="#">Careers</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown me-2">
+                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Connect
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Contact</a></li>
+                  <li><a class="dropdown-item" href="#">Newsletter</a></li>
+                  <li><a class="dropdown-item" href="#">LinkedIn</a></li>
+                </ul>
+              </li>
+            </ul>
 
-  Company
+            <form class="form-inline">
+              <button class="btn text-white me-2" type="submit">Log In</button>
+              <button class="btn me-3 bg-white rounded-pill px-4 text-danger" type="submit"><strong>Sign
+                  Up</strong></button>
+            </form>
+          </div>
+        </div>
+      </nav>
+      <section class="text-white text-center ">
+        <h1 class="mb-3" style="font-size: 60px">A modern publishing platform</h1>
+        <p>Grow your audience and build your online brand</p>
+        <a class="btn bg-white rounded-pill text-danger rounded-pill px-4 btn-lg mt-4 me-2" href=""
+          target="_blank"><strong>Start for Free</strong></a>
+        <a class="btn btn-outline-light rounded-pill px-4 btn-lg mt-4" href="" target="_blank"><strong>Learn
+            More</strong></a>
+      </section>
+    </div>
+  </header>
 
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-
-  Contact
-  Newsletter
-  LinkedIn
-  
-  Login
-  Sign Up
-
-  A modern publishing platform
-  Grow your audience and build your online brand
-
-  Start for Free
-  Learn More
-
-  Designed for the future
-
-  Introducing an extensible editor
-  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-  The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-  videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-  change the looks of a blog.
-
-  Robust content management
-  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
-
-  State of the Art Infrastructure
-  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
-  This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
-
-  Free, open, simple
-  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
-  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-
-  Powerful tooling
-  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-  capable of producing even the most complicated sites.
-
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-  
-  Contact
-  Newsletter
-  LinkedIn
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <br>
+  <h2 class="text-center font-weight-bold fs-1 fw-bold mb-4 p-4" style="color: hsl(208, 49%, 24%);">
+    Designed for the future
+  </h2>
+  <br>
+  <div class="container mb-5 flex-column flex-lg-row">
+    <div class="row">
+      <div class="col-lg-6">
+        <h3 class="font-weight-bold mb-2 mt-2 mb-4 fs-1" style="color: hsl(208, 49%, 24%);">
+          Introducing an extensible editor
+        </h3>
+        <p class="mb-2">
+          Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
+          The editor supports management of multiple blogs and allows easy manipulation of embeds such as images,
+          videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or
+          change the looks of a blog.
+        </p>
+        <br>
+        <h3 class="font-weight-bold mb-2 mt-2 mb-4 fs-1" style="color: hsl(208, 49%, 24%);">
+          Robust content management
+        </h3>
+        <p class="mb-2">
+          Flexible content management enables users to easily move through posts. Increase the usability of your blog
+          by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+        </p>
+      </div>
+      <div class="col-lg-6 align-self-start">
+        <img src="images/illustration-editor-desktop.svg" class="img-fluid" alt="logo">
+      </div>
+    </div>
   </div>
+  <div class="state-of-art-container d-flex flex-column flex-lg-row text-white mt-5">
+    <div class="container position-relative">
+      <div class="row">
+        <div class="state-of-art-container__image col-10 ms-auto me-auto col-lg-5">
+          <img id="mobile-phones" src="./images/illustration-phones.svg" class="img-fluid position-relative"
+            alt="2 mobile phones">
+        </div>
+        <div
+          class="ms-auto me-auto text-center text-lg-start col-10 col-lg-7 align-self-center pb-5 mb-5  pb-lg-0 mb-lg-0">
+          <h2 class="fs-1 fw-bold mb-4">
+            State of the Art Infrastructure
+          </h2>
+          <p>
+            With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity.
+            This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <section class="laptop-section d-flex flex-column my-5 flex-lg-row align-items-center">
+    <aside>
+      <img src="./images/illustration-laptop-mobile.svg" class="img-fluid d-lg-none" alt="">
+      <img id="laptop-desktop" src="./images/illustration-laptop-desktop.svg" class="d-none d-lg-block" alt="">
+    </aside>
+    <article class="text-center text-lg-start mt-5 mt-lg-0 px-4 px-sm-5 px-lg-0 offset-xl-1 col-xl-4 col-xxl-5">
+      <div>
+        <h3 class="mb-4 fs-1 laptop-section__title">
+          Free, open, simple
+        </h3>
+        <p class="fs-5">
+          Blogr is a free and open source application backed by a large community of helpful developers.
+          It supports features such as code syntax highlighting, RSS feeds, social media integration, third-party
+          commenting tools,
+          and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+        </p>
+      </div>
+      <div class="mt-5">
+        <h3 class="mb-4 fs-1 laptop-section__title">
+          Powerful tooling
+        </h3>
+        <p class="fs-5">
+          Batteries included. We built a simple and straight forward CLI tool that makes customization and deployment a
+          breeze, but capable of producing even the most complicated sites.
+        </p>
+      </div>
+    </article>
+  </section>
+
+  <footer class="text-start text-white">
+    <div class="container p-4 ">
+      <section class="ms-5">
+        <div class="row mt-5 d-flex justify-content-around">
+          <div class="col-lg-3 col-md-4 mb-4 mb-md-0 ">
+            <h5>Product</h5>
+            <ul class="list-unstyled mt-5 opacity-75 ">
+              <li>
+                <a href="#!" class="text-white text-decoration-none ">Overview</a>
+              </li>
+              <li class="mt-1">
+                <a href="#!" class="text-white text-decoration-none">Pricing</a>
+              </li>
+              <li class="mt-1">
+                <a href="#!" class="text-white text-decoration-none">Marketplace</a>
+              </li>
+              <li class="mt-1">
+                <a href="#!" class="text-white text-decoration-none">Features</a>
+              </li>
+              <li class="mt-1">
+                <a href="#!" class="text-white text-decoration-none">Integrations</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-md-4 mb-4 mb-md-0">
+            <h5>Company</h5>
+            <ul class="list-unstyled mt-5 opacity-75 ">
+              <li>
+                <a href="#!" class="text-white text-decoration-none">About</a>
+              </li>
+              <li class="mt-1">
+                <a href="#!" class="text-white text-decoration-none">Team</a>
+              </li>
+              <li class="mt-1">
+                <a href="#!" class="text-white text-decoration-none">Blog</a>
+              </li>
+              <li class="mt-1">
+                <a href="#!" class="text-white text-decoration-none">Careers</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-md-4 mb-4 mb-md-0 ">
+            <h5>Connect</h5>
+            <ul class="list-unstyled mt-5 opacity-75 ">
+              <li>
+                <a href="#!" class="text-white text-decoration-none">Contact</a>
+              </li>
+              <li class="mt-1">
+                <a href="#!" class="text-white text-decoration-none">Newsletter</a>
+              </li>
+              <li class="mt-1">
+                <a href="#!" class="text-white text-decoration-none">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </div>
+    <div class="attribution pb-2">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Maral Kepenekli | Mehmet ÜNLÜ</a>.
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
